--- a/index.html
+++ b/index.html
@@ -61,17 +61,33 @@
             <img src="img/camisa-1.png">
         </div>
         <div class="conteiner-div-1">
-            <p>Ideal para suor<span>intenso!</span><br>
+            <p>Ideal para suor<span> intenso!</span><br>
             <span>Com</span> 2x mais absorção do<br>
              que uma camisa de algodão<br>
-             <span>e bloqueio</span>por tecido<br>
-             <span>impermeável</span>nas axilas.</p>
+             <span>e bloqueio</span> por tecido<br>
+             <span>impermeável</span> nas axilas.</p>
         </div>
         <div class="gym">
             <img src="img/gym-club.png">
         </div>
     </main>
-    <footer class="fixed-bttom rodape">
+    <main class="part2">
+        <div class="selo">
+            <h2><span>SUA</span> CRIATIVIDADE <span>COM A<br>NOSSA</span> QUALIDADE!</h2>
+        </div>
+        <div>
+            <img src="img/selo.png" alt="">
+        </div>
+        <div>
+            <h2>O sistema de personalização da GymClub<br>é o coração da nossa empresa, permitindo<br>que cada cliente crie peças únicas que<br>que refletem sua individualidade e estilo pessoal.<br><br>Nosso sistema entrega aos nossos clientes o<br>poder da criação oferecendo uma experiência<br>única e explosiva!</h2>
+        </div>
+    </main>
+    <main class="part3">
+        <img src="img/gym-club.png" alt="">
+        <h2>VENHA NOS CONHECER MELHOR</h2>
+        <button class="btn">GYM CLUB</button>
+    </main>
+    <footer class="fixed-buttom">
         <a href="#"><p>&copy;Powered by LwisThech</p></a>
     </footer>
 </body>
